--- a/server/.env-example
+++ b/server/.env-example
@@ -1,7 +1,7 @@
 DB=rsdb
-DB_HOST=localhost
+DB_HOST=172.20.0.2
 DB_PORT=5432
 DB_USER=rsdb_admin
-DB_PASSWORD=adrienandrealindsay
+DB_PASSWORD=wert66
 DB_DIALECT=postgres
 SERVER_PORT=5000
