--- a/front-end-react/package.json
+++ b/front-end-react/package.json
@@ -13,9 +13,11 @@
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "babel": "^6.23.0",
+    "cors": "^2.8.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "^5.0.1",
+    "tailwind": "^4.0.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -46,7 +48,7 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.2",
-    "@babel/plugin-proposal-private-property-in-object": "7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "7.21.11",
+    "tailwindcss": "^3.3.2"
   }
 }
